Added weekly endpoints
